[551315] Register for an URI extension to start Oomph installer by clicking on an URI
https://bugs.eclipse.org/bugs/show_bug.cgi?id=551315